<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="#FFFFFF"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_options"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/colorPrimary"
    app:popupTheme="@style/PopupTheme"
    app:theme="@style/ToolbarTheme"
    app:title="@string/options_title" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar_options">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lib_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/libraries_title"
        android:textColor="#D9000000"
        android:textSize="16sp" />

      <RadioGroup
        android:id="@+id/radio_group_library"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lib_title">

        <RadioButton
          android:id="@+id/lib_glide"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/glide" />

        <RadioButton
          android:id="@+id/lib_picasso"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/picasso" />

        <RadioButton
          android:id="@+id/lib_ion"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/ion" />

        <RadioButton
          android:id="@+id/lib_fresco"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/fresco" />

      </RadioGroup>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/repo_title"
        android:layout_below="@+id/radio_group_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/image_sizes"
        android:textColor="#D9000000"
        android:textSize="16sp" />

      <RadioGroup
        android:id="@+id/radio_group_repo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_title">

        <RadioButton
          android:id="@+id/repo_thumb"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/thumb" />

        <RadioButton
          android:id="@+id/repo_small"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/small" />

        <RadioButton
          android:id="@+id/repo_regular"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/regular" />

        <RadioButton
          android:id="@+id/repo_full"
          android:layout_width="match_parent"
          android:layout_height="?listPreferredItemHeightSmall"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:gravity="start|center_vertical"
          android:text="@string/full" />

      </RadioGroup>

    </RelativeLayout>

  </ScrollView>

</RelativeLayout>